libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/fn-params-duplicates.jsonc
//@ run: fail
//@ description: fn/4 tuple params should fail to compile
[
  "::kernel::special_form::fn",
  { "#struct": {} },
  { "#struct": { "a": "Int", "a": "Int" } },
  //~^ ERROR Remove this duplicate parameter 'a'
  "_",
  ["+", "a", "b"]
]
